# django-shopapp

./: README.md
main_project/: .dockerignore  .env.template  Dockerfile  docker-compose.yaml  orders.csv  pyproject.toml  requirements.txt
main_project/mysite/: logger.txt  shopapp-fixtures.json
main_project/mysite/blogapp/: models.py  urls.py  views.py
main_project/mysite/blogapp/migrations/: 0001_initial.py  0002_alter_article_pub_date.py  0003_alter_article_pub_date.py  0004_alter_article_pub_date.py  0005_alter_article_pub_date.py  0006_alter_article_pub_date.py  0007_alter_article_pub_date.py
main_project/mysite/myauth/: models.py  tests.py  urls.py  views.py
main_project/mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
main_project/mysite/mysite/: settings.py  sitemaps.py  urls.py
main_project/mysite/requestdataapp/: forms.py  middlewares.py  views.py
main_project/mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
main_project/mysite/shopapp/fixtures/: orders-fixtures.json  products-fixture.json  user-fixtures.json
main_project/mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_alter_order_user.py  0009_product_created_by.py  0010_creator_remove_product_created_by.py  0011_alter_creator_creator.py  0012_alter_creator_creator.py  0013_product_created_by_delete_creator.py  0023_productimage.py  (+10 more)
(+36 files in other folders)
