[tool.poetry]
name = "main-project"
version = "0.1.0"
description = ""
authors = ["Артëм Галежа <artemgalezha@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.4"
djangorestframework = "3.14.0"
django-filter = "23.3"
pillow = "^10.1.0"
django-debug-toolbar = "^4.2.0"
gunicorn = "^21.2.0"
drf-spectacular = "^0.26.5"
urllib3 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
